--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -53,3 +53,18 @@ div{
     font-size: 11px;
     text-align: center;
 }
+.rightContent ul{
+    list-style: none;
+}
+.rightContent ul li::before{
+    content: "- ";
+}
+.rightContent ul li{
+    line-height: 30px;
+}
+.rightContent ul li a:visited{
+    color:red;
+}
+.rightContent ul li:nth-child(4){
+    font-size: 30px;
+}
